--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,23 +45,23 @@ dependencies:
     sdk: flutter
 
   # 🌱 State management
-  flutter_riverpod: ^2.5.1
+  flutter_riverpod: ^2.6.1
 
   # 🌐 Networking
-  dio: ^5.4.0
+  dio: ^5.9.0
   json_annotation: ^4.9.0
 
   # 💾 Local persistence
   hive: ^2.2.3
   hive_flutter: ^1.1.0
-  flutter_secure_storage: ^9.0.0   # For token storage
+  flutter_secure_storage: ^9.2.4  # For token storage
 
   # 🖼️ UI helpers
-  cached_network_image: ^3.3.1
-  carousel_slider: ^4.2.1          # Product detail image carousel
+  cached_network_image: ^3.4.1
+  carousel_slider: ^5.1.1         # Product detail image carousel
 
   # 🎨 Theming
-  shared_preferences: ^2.3.2       # Persist theme toggle (light/dark)
+  shared_preferences: ^2.5.3      # Persist theme toggle (light/dark)
 
   # 🔗 Functional result handling (for repo pattern)
   dartz: ^0.10.1
@@ -70,9 +70,9 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  build_runner: ^2.4.6
-  json_serializable: ^6.8.0
-  hive_generator: ^2.0.1
+  build_runner:
+  json_serializable:
+  hive_generator:
 
   # 🧹 Static analysis
   flutter_lints: ^6.0.0
@@ -94,6 +94,7 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
 
   # To add assets to your application, add an assets section, like this:
   # assets:
